# Tracking_GNN_Libtorch-3

./: CMakeLists.txt  LICENSE.md  README.md  data_preprocessing.cc  evaluate_events.cc  evaluate_events_2.cc  evaluate_gnn.cc  train.cc  train_2.cc  train_data_preprocessing.cc  train_data_preprocessing_2.cc
configs/: evaluate_parameters.yaml  evaluate_parameters_2.yaml  preprocessing_parameters.yaml  training_parameters.yaml  training_parameters_2.yaml
include/: AddNewEdges.hh  EdgeClassificationGNN.hh  GATConv.hh  GraphDataLoader.hh  GraphDataset.hh  KATLayer.hh  KATMLP.hh  MLP.hh  PostProcessing.hh  PreProcessing.hh  ROOTPlots.hh  TensorDataset.hh
model_save/: model_checkpoint.pth
src/: AddNewEdges.cc  EdgeClassificationGNN.cc  KATLayer.cc  KATMLP.cc  PostProcessing.cc  PreProcessing.cc  ROOTPlots.cc  TensorDataset.cc
